--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@firebase/firestore": "^4.7.6",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/next-auth": "^3.13.0",
     "bootstrap": "^5.3.3",
     "firebase": "^11.2.0",
+    "mongoose": "^8.10.1",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0"
@@ -28,6 +33,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "nodemon": "^3.1.9",
     "typescript": "^5"
   }
 }
