--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "trans_project",
+  "homepage": "https://bansoderocker.github.io/trans_project/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
