--- a/package.json
+++ b/package.json
@@ -10,31 +10,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.34.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@firebase/firestore": "^4.7.6",
-    "@mui/icons-material": "^6.4.2",
-    "@mui/material": "^6.4.2",
-    "@reduxjs/toolkit": "^2.5.1",
-    "@types/next-auth": "^3.13.0",
+    "@firebase/firestore": "^4.7.10",
+    "@mui/icons-material": "^6.4.11",
+    "@mui/material": "^6.4.11",
+    "@mui/x-date-pickers": "^8.0.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "bootstrap": "^5.3.3",
-    "firebase": "^11.2.0",
-    "mongoose": "^8.10.1",
-    "next": "15.1.6",
-    "next-auth": "^4.24.11",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "firebase": "^11.6.0",
+    "mongoose": "^8.13.2",
+    "next": "15.3.1",
+    "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
+    "react-dom": "^19.1.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "nodemon": "^3.1.9",
-    "typescript": "^5"
+    "eslint": "^9.24.0",
+    "eslint-config-next": "15.3.1",
+    "typescript": "^5.8.3"
   }
 }
