--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "eslint": "^9.24.0",
     "eslint-config-next": "15.3.1",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3"
   }
 }
