add daily entry

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,27 +12,29 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@firebase/firestore": "^4.7.10",
-    "@mui/icons-material": "^6.4.11",
-    "@mui/material": "^6.4.11",
-    "@mui/x-date-pickers": "^8.0.0",
-    "@reduxjs/toolkit": "^2.7.0",
-    "bootstrap": "^5.3.3",
+    "@emotion/styled": "^11.14.1",
+    "@firebase/firestore": "^4.9.0",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/material": "^6.5.0",
+    "@mui/x-data-grid-pro": "^7.22.1",
+    "@mui/x-date-pickers": "^8.9.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "firebase": "^11.6.0",
-    "mongoose": "^8.13.2",
-    "next": "15.3.1",
+    "firebase": "^11.10.0",
+    "next": "15.4.4",
+    "node-localstorage": "^3.0.5",
     "react": "^19.1.0",
-    "react-datepicker": "^8.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "eslint": "^9.24.0",
-    "eslint-config-next": "15.3.1",
-    "prettier": "^3.5.3",
+    "eslint": "^9.32.0",
+    "eslint-config-next": "^15.4.4",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3"
   }
 }
